--- a/LazyRoad In-Game Designer/nbproject/project.properties
+++ b/LazyRoad In-Game Designer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=LazyRoad In-Game Designer
-application.vendor=Wolfwood
+application.vendor=VeraLapsa
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -21,18 +22,18 @@ debug.classpath=\
 debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
-dist.dir=C:/gitprojects/Depencancies/plugins
+dist.dir=D:/gitprojects/Depencancies/plugins
 dist.jar=${dist.dir}/LazyRoadInGameDesigner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.WorldEdit.jar=C:\\gitprojects\\Depencancies\\WorldEdit.jar
+file.reference.WorldEdit.jar=D:\\gitprojects\\Depencancies\\plugins\\WorldEdit.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${libs.CraftBukkit.classpath}:\
-    ${reference.LazyRoad.jar}:\
-    ${file.reference.WorldEdit.jar}
+    ${libs.Craftbukkit.classpath}:\
+    ${file.reference.WorldEdit.jar}:\
+    ${reference.LazyRoad.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,7 +53,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.WorldEdit.jar=http://www.sk89q.com/docs/worldedit/api/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -62,7 +62,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.LazyRoad=../../../Users/Wolfwood/Documents/NetBeansProjects/LazyRoad
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
