Switch to Maven for building.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/LazyRoad In-Game Designer/nbproject/private/
-/LazyRoad In-Game Designer/build/
-/LazyRoad In-Game Designer/nbproject/project.properties
-/LazyRoad In-Game Designer/nbproject/build-impl.xml
+.classpath
+.project
+.settings
+target
